@@ -29,6 +29,9 @@ defaults: &defaults
     # Add pusher to recipients list (default: false)
     # add_pusher: true
 
+    # The location where build traces are stored (default: builds/). Relative paths are relative to Rails.root
+    # builds_path: builds/
+
   gravatar:
     enabled: true
     plain_url: "http://www.gravatar.com/avatar/%{hash}?s=%{size}&d=mm"
