@@ -40,6 +40,7 @@ Settings.gitlab_ci['support_email']       ||= Settings.gitlab_ci.email_from
 Settings.gitlab_ci['all_broken_builds'] = true if Settings.gitlab_ci['all_broken_builds'].nil?
 Settings.gitlab_ci['add_pusher']     = false if Settings.gitlab_ci['add_pusher'].nil?
 Settings.gitlab_ci['url']                 ||= Settings.send(:build_gitlab_ci_url)
+Settings.gitlab_ci['builds_path']         = File.expand_path(Settings.gitlab_ci['builds_path'] || "builds/", Rails.root)
 
 # Compatibility with old config
 Settings['gitlab_server_urls'] ||= Settings['allowed_gitlab_urls']
