@@ -1,11 +1,15 @@
 RSpec.configure do |config|
+  def builds_path
+    Rails.root.join('tmp/builds_test')
+  end
+
   config.before(:each) do
-    FileUtils.mkdir_p("tmp/builds_test")
-    Build.any_instance.stub(:root_dir_to_trace).and_return("tmp/builds_test")
+    FileUtils.mkdir_p(builds_path)
+    Settings.gitlab_ci['builds_path'] = builds_path
   end
 
   config.after(:suite) do
-    Dir.chdir(Rails.root.join("tmp/builds_test")) do
+    Dir.chdir(builds_path) do
       `ls | grep -v .gitkeep | xargs rm -r`
     end
   end
