@@ -9,10 +9,11 @@ v7.13.0
   - Redirect back after authorization
   - Change favicon
   - Refactoring: Get rid of private_token usage in the frontend.
+  - Build traces is stored in the file instead of database
+  - Make the builds path configurable
 
 v7.12.2
   - Revert: Runner without tag should pick builds without tag only
-  - Build traces is stored in the file instead of database
 
 v7.12.1
   - Runner without tag should pick builds without tag only
